--- a/packages/wormhole-relayer/package.json
+++ b/packages/wormhole-relayer/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@certusone/wormhole-sdk": "^0.10.15",
-    "@wormhole-foundation/relayer-engine": "^0.3.2"
+    "@wormhole-foundation/relayer-engine": "^0.3.2",
+    "ethers": "5",
+    "package-utils": "../package-utils"
   }
 }
