--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,10 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": {
-      "package-utils": ["./packages/package-utils"],
-      "metatransaction-broadcaster/*": ["./packages/metatransaction-broadcaster/*"]
-    }
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "downlevelIteration": true,
+    "types": ["node"],
   },
-  "include": ["**/*.ts", "**/*.tsx"]
+  "include": ["scripts/*.ts", "./packages/**/*.tsx"]
 }
