--- a/packages/package-utils/package.json
+++ b/packages/package-utils/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ethersproject/experimental": "^5.7.0",
     "axios": "^0.28.0",
     "discord.js": "^12.5.3",
     "ethers": "^5.6.9",
